--- a/laundpadlab_challenge_frontend/index.html
+++ b/laundpadlab_challenge_frontend/index.html
@@ -17,7 +17,7 @@
               <th scope="col">Stars</th>
               <th scope="col">Forks</th>
               <th scope="col">Commits in.. Past Week</th>
-              <th scope="col">Past 4 Weeks</th>
+              <th scope="col">Past Month</th>
               <th scope="col">Past Year</th>
             </tr>
           </thead>
@@ -55,7 +55,23 @@
               <td id="vue-year"></td>
             </tr>
       </div>
+      <div class="dropdown">
+        <div>Which framework do you think is the best?</div>
+        <select>
+          <option value="none" selected disabled hidden>
+            Select One...
+          </option>
+          <option value="react">React</option>
+          <option value="Angular">Angular</option>
+          <option value="ember">Ember</option>
+          <option value="vue">Vue</option>
+        </select>
+        <button type="button" class="btn btn-sm btn-primary">Vote</button>
+      </div>
     </main>
     <script src="./src/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
