--- a/launchpadlab_challenge_frontend/index.html
+++ b/launchpadlab_challenge_frontend/index.html
@@ -66,7 +66,13 @@
           <option value="ember">Ember</option>
           <option value="vue">Vue</option>
         </select>
-        <button type="button" class="btn btn-sm btn-primary">Vote</button>
+        <div>
+          Please enter your email:
+        </div>
+        <div>
+          <input type="text"></input>
+        </div>
+        <button type="button" id="vote" class="btn btn-sm btn-primary">Vote</button>
       </div>
     </main>
     <script src="./src/index.js"></script>
